--- a/estilo.css
+++ b/estilo.css
@@ -21,7 +21,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-.aca{
+.mi-clase{
     display: grid;
     place-items: center;
     grid-gap: 10px;
